# emplace

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
emplace/: __init__.py  formatter.py  placeholder.py
examples/: highlight.py
placeholders/: __init__.py  formatter.py  placeholder.py
tests/: test_all.py
