[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "placeholders"
version = "0.1.0"
homepage = "https://github.com/eeemoon/placeholders"
description = "Fast and Pythonic way to process placeholders."
authors = ["EeeMoon"]
license = "MIT"
readme = "README.md"
include = ["pyproject.toml", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.8"